Login functional, dashboard page and splash page created

--- a/styles/antdstyles.less
+++ b/styles/antdstyles.less
@@ -1,4 +1,4 @@
-@import "~antd/dist/antd.dark.less";
+@import "~antd/dist/antd.less";
 
 .login-form {
   max-width: 300px;
@@ -11,4 +11,8 @@
 }
 .login-form-button {
   width: 100%;
+}
+
+.add-item:hover {
+  border-style: solid;
 }
