Contacts, notes, and activities added

--- a/styles/antdstyles.less
+++ b/styles/antdstyles.less
@@ -55,6 +55,30 @@
   transition: all 0.3s ease;
 }
 
+.board-item-blue {
+  background-color: #69c0ff;
+}
+
+.board-item-green {
+  background-color: #95de64;
+}
+
+.board-item-red {
+  background-color: #ff7875;
+}
+
+.board-item-yellow {
+  background-color: #fff566;
+}
+
+.board-item-white {
+  background-color: transparent;
+}
+
 .board-item:hover {
-  background: rgba(0, 0, 0, 0.06);
+  background: rgba(0, 0, 0, 0.06) !important;
+}
+
+.edit-job-modal.ant-modal {
+  width: 50vw !important;
 }
